--- a/source/src/responsive.css
+++ b/source/src/responsive.css
@@ -10,7 +10,7 @@
     .btn{
         margin-top: 15px;
     }
-    
+
     /* Explore */
     #explore-area{
         padding: 10px 0;
@@ -38,28 +38,29 @@
         width: 100%;
     }
     .card{
-        position: absolute;
-        background: var(--bg-card);
-        padding: 10px;
-        left: 25%;
-        transform: translateX(-20%);
+        margin: 0.3rem 0;
+        padding: 5px;
+        left: 50%;
+        transform: translateX(-50%);
     }
     .card-body{
-        padding: 1rem .5rem .5rem;
+        padding: 5px 5px 0;
     }
     .card-heading{
         display: flex;
         justify-content: space-between;
     }
     .card-name{
-        font-size: 20px;
+        font-size: 10px;
         font-weight: 700;
     }
     .card-user{
         display: flex;
+        justify-content: flex-end;
     }
     .card-user img{
-        margin: 0 -6px;
+        margin: 0;
+        width: 70%;
     }
     .card-content ul{
         list-style: none;
@@ -67,11 +68,11 @@
         padding: 0;justify-content: space-between;
     }
     .card-content ul li{
-        font-size: 12px;
-        padding: 5px;
+        font-size: 6px;
+        padding: 2px;
     }
     .card-content ul li span{
-        font-size: 9px;
+        font-size: 7px;
         color: #545C71;
     }
     .explore-partner{
@@ -80,9 +81,40 @@
     .explore-partner li{
         margin: 0 10px;
     }
-
-
-    
+    .explore-partner li img{
+        max-width: 120%;
+    }
+    .explore-right .card{
+        right: unset;
+        margin: 0;
+        width: 100%;
+    }
+    .explore-right .card-user img{
+        margin: 0px -3px;
+    }
+    .explore-right .card-name{
+        font-size: 16px;
+    }
+    .explore-right .card-content ul li{
+        font-size: 14px;
+    }
+    .explore-right .card-content ul li span{
+        font-size: 12px;
+    }
+    /* Market */  
+    .market-menu li{
+        padding: 5px 20px;
+        margin: 5px 2px;
+    }  
+    /* Creator */
+    .creator-box-btn{
+        display: flex;
+        justify-content: space-around;
+    }
+    .creator-box-btn .btn{
+        margin: 40px 0;
+        width: auto;
+    }
 }
 
 /* Medium */
@@ -97,7 +129,6 @@
     .btn{
         margin-top: 15px;
     }
-
     /* Explore */
     #explore-area{
         padding: 10px 0;
@@ -124,12 +155,17 @@
         position: relative;
         width: 100%;
     }
+    .explore-right .card{
+        position: unset;
+        margin: 0px 4rem;
+    }
+    .explore-right .card-content ul li,
+    .explore-right .card-content ul li span {
+        font-size: 16px;
+    }
     .card{
-        position: absolute;
-        background: var(--bg-card);
         padding: 10px;
-        left: 25%;
-        transform: translateX(-20%);
+        margin: 0.5rem 0;
     }
     .card-body{
         padding: 1rem .5rem .5rem;
@@ -146,7 +182,7 @@
         display: flex;
     }
     .card-user img{
-        margin: 0 -6px;
+        margin: 0 -3px;
     }
     .card-content ul{
         list-style: none;
@@ -158,16 +194,17 @@
         padding: 5px;
     }
     .card-content ul li span{
-        font-size: 9px;
+        font-size: 14px;
         color: #545C71;
-    }
-    .explore-partner{
-        margin-top: 540px;
     }
     .explore-partner li{
         margin: 0;
     }
+    /* Market */
 
+    /* Creator */
+    
+    
 }
 
 /* Large */
@@ -206,11 +243,24 @@
         position: relative;
         width: 100%;
     }
+    .explore-right .card-name{
+        font-size: 18px;
+    }
+    .explore-right .card-content ul li,
+    .explore-right .card-content ul li span{
+        font-size: 14px;
+    }
+    .explore-partner{
+        margin-top: 100px;
+    }
+    .explore-partner li{
+        margin: 0;
+    }
+    
     .card{
-        position: absolute;
         background: var(--bg-card);
         padding: 10px;
-        left: 18%;
+        margin: 0.5rem 0;
     }
     .card-body{
         padding: 1rem .5rem .5rem;
@@ -220,15 +270,10 @@
         justify-content: space-between;
     }
     .card-name{
-        font-size: 20px;
+        font-size: 14px;
         font-weight: 700;
     }
-    .card-user{
-        display: flex;
-    }
-    .card-user img{
-        margin: 0 -6px;
-    }
+    
     .card-content ul{
         list-style: none;
         display: flex;
@@ -239,18 +284,26 @@
         padding: 5px;
     }
     .card-content ul li span{
-        font-size: 9px;
+        font-size: 10px;
         color: #545C71;
     }
-    .explore-partner{
-        margin-top: 70px;
+    
+    /* Market */
+
+    /* Creator */
+    .creator-box{
+        height: 100%;
     }
-    .explore-partner li{
-        margin: 0;
+    .creator-box h3{
+        height: 20%;
     }
+    
+
+    
 }
 
 /* XLarge */
+/* >= 992 & < 1199 */
 @media screen and (min-width: 922px) and (max-width: 1199px) {
     /* Nav */
     input.form-control{
@@ -289,10 +342,14 @@
         position: relative;
         width: 100%;
     }
+    .explore-right .card-content ul li,
+    .explore-right .card-content ul li span{
+        font-size: 14px;
+    }
     .card{
-        position: absolute;
         background: var(--bg-card);
         padding: 10px;
+        margin: 0.5rem 0;
     }
     .card-body{
         padding: 1rem .5rem .5rem;
@@ -302,14 +359,8 @@
         justify-content: space-between;
     }
     .card-name{
-        font-size: 20px;
+        font-size: 14px;
         font-weight: 700;
-    }
-    .card-user{
-        display: flex;
-    }
-    .card-user img{
-        margin: 0 -6px;
     }
     .card-content ul{
         list-style: none;
@@ -317,18 +368,26 @@
         padding: 0;justify-content: space-between;
     }
     .card-content ul li{
-        font-size: 10px;
+        font-size: 12px;
         padding: 5px;
     }
     .card-content ul li span{
-        font-size: 9px;
+        font-size: 10px;
         color: #545C71;
     }
     .explore-partner{
-        margin-top: 130px;
+        margin-top: 170px;
     }
     .explore-partner li{
         margin: 0 20px;
+    }
+
+    /* Creator */
+    .creator-box{
+        height: 100%;
+    }
+    .creator-box h3{
+        height: 20%;
     }
     
  }
