--- a/source/src/responsive.css
+++ b/source/src/responsive.css
@@ -115,6 +115,34 @@
         margin: 40px 0;
         width: auto;
     }
+    /* Contact */
+    .contact-box h1{
+        font-size: 20px;
+    }
+    .contact-box p{
+        font-size: 12px;
+    }
+    .contact-box .btn{
+        font-size: 14px;
+    }
+    /* Footer */
+    ul.social-list{
+        justify-content: center;
+        padding-left: 0;
+    }
+    .list-f{
+        padding-left: 0;
+    }
+    .copy{
+        text-align: center;
+    }
+    .rule{
+        justify-content: center;
+        font-size: 12px;
+    }
+    .rule p{
+        margin: 0px 15px;
+    }
 }
 
 /* Medium */
@@ -200,9 +228,14 @@
     .explore-partner li{
         margin: 0;
     }
-    /* Market */
-
-    /* Creator */
+    /* Footer */
+    .copy{
+        text-align: center;
+    }
+    .rule,
+    .social-list{
+        justify-content: center;
+    }
     
     
 }
@@ -273,7 +306,6 @@
         font-size: 14px;
         font-weight: 700;
     }
-    
     .card-content ul{
         list-style: none;
         display: flex;
@@ -287,8 +319,6 @@
         font-size: 10px;
         color: #545C71;
     }
-    
-    /* Market */
 
     /* Creator */
     .creator-box{
@@ -297,8 +327,21 @@
     .creator-box h3{
         height: 20%;
     }
-    
-
+    /* Top Market */
+    .rank-box{
+        margin: 6px 0;
+    }
+    .rank-content p{
+        font-size: 12px;
+        line-height: 10px;
+    }
+    .rank-content span{
+        font-size: 10px;
+    }
+    /* Footer */
+    .rule p{
+        margin: 0px 20px;
+    }
     
 }
 
@@ -388,6 +431,22 @@
     }
     .creator-box h3{
         height: 20%;
+    }
+    /* Top Market */
+    .rank-box{
+        margin: 6px 0;
+    }
+    .rank-content p{
+        font-size: 14px;
+        line-height: 10px;
+    }
+    .rank-content span{
+        font-size: 10px;
+    }
+
+    /* Footer */
+    .rule p{
+        margin: 0px 20px;
     }
     
  }
